# qines-gai-infra

./: .gitignore  .gitmodules  README.md  docker-compose.yml
backend/: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  buildspec.yml  openapi.json  pyproject.toml
backend/pptx_template/: SCSK_PPT_16x9_Design_A_jp.pptx
backend/src/qines_gai_backend/: file_uploader.py  logger_config.py  main.py
backend/src/qines_gai_backend/modules/ai/: api.py  (+7 more)
backend/src/qines_gai_backend/schemas/: schema.py
backend/src/qines_gai_backend/shared/: byte_length_validater.py  datetime_converter.py  document_access_checker.py  exceptions.py  storage_controller.py  verify_token.py
backend/tests/: conftest.py
backend/tests/config/dependencies/: test_data_connection.py  test_dependencies.py
backend/tests/config/external_resources/: test_postgresql.py
backend/tests/modules/: __init__.py
backend/tests/modules/ai/: test_api.py  test_convert_md_to_pptx.py  test_mcp_client.py  test_repositories.py  test_services.py
backend/tests/modules/artifacts/: test_api.py  test_models.py  test_repositories.py  test_services.py
backend/tests/modules/collections/: test_api.py  test_models.py  test_repositories.py  test_services.py
backend/tests/modules/conversations/: test_api.py  test_models.py  test_repositories.py  test_services.py
backend/tests/modules/conversion/: test_api.py  test_repositories.py  test_services.py
backend/tests/modules/documents/: test_api.py  test_processors.py  test_repositories.py  test_services.py
backend/tests/shared/: test_byte_length_validater.py  test_document_access_checker.py  test_storage_controller.py  test_verify_token.py
(+240 files in other folders)
